removed nfs-server from docker nodes

--- a/images/base/recipes/debian.yaml
+++ b/images/base/recipes/debian.yaml
@@ -61,7 +61,9 @@ bootstrap:
     - image: $$docker_image
     - dns: $$docker_dns
     - hostname: kameleon-$$distrib
-
+  - break:
+    - break:
+      - breakpoint: teeest
 #== Install and configuration steps
 setup:
   # Install
